--- a/nablaweb/podcast/templates/podcast/podcast_list.html
+++ b/nablaweb/podcast/templates/podcast/podcast_list.html
@@ -6,47 +6,79 @@
 
 {% block title %}Skråttcast{% endblock %}
 {% block content %}
-{% addtoblock "css" %}
-<link href="{% static "podcast/list.css" %}" rel="stylesheet" />
-{% endaddtoblock %}
-<h1>Skråttcast</h1>
-<p>Om <a href="/komite/skrattcast/">Skråttcast</a>.</p>
-{% if podcast_list %}
-    <div class="list-container">
-      <ul>
-        {% for podcast in podcast_list %}
-        <li>
-          {% if podcast.image %}
-          <img src="{% thumbnail podcast.image 300x300 box=podcast.cropping quality=95 %}" alt="{{ podcast.title }}"/>
-          {% endif %}
-          <a href="/podcast/{{ podcast.id }}">
-            <h2>{{ podcast.title }}</h2>
-            <span>{{ podcast.pub_date }}</span>
-          </a>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
-    <nav>
-        <ul class="pager">
-            {% if page_obj.has_next %}
-                <li class="previous">
-                    <a href="?page={{ page_obj.next_page_number }}"><span aria-hidden="true">&larr;</span> Eldre</a>
-                </li>
-            {% endif %}
+    {% addtoblock "css" %}
+        <link href="{% static "podcast/list.css" %}" rel="stylesheet"/>
+    {% endaddtoblock %}
+    <h1>Skråttcast</h1>
+    <p>
+        {% if info %}
+            {{ info.content }}
+        {% else %}
+            Om <a href="/komite/skrattcast/">Skråttcast</a>.
+        {% endif %}
+    </p>
+    {% if season_name %}
+        <h1>{{ season_name }}</h1>
+        <img src="{{ season.banner.url }}"/>
+    {% endif %}
+    {% if podcast_list %}
+        <div class="list-container">
+            <ul>
+                {% for podcast in podcast_list %}
+                    <li>
+                        {% if podcast.image %}
+                            <img src="{% thumbnail podcast.image 300x300 box=podcast.cropping quality=95 %}"
+                                 alt="{{ podcast.title }}"/>
+                        {% endif %}
+                        <a href="/podcast/{{ podcast.id }}">
+                            <h2>{{ podcast.title }}</h2>
+                            <span>{{ podcast.pub_date }}</span>
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <nav>
+            <ul class="pager">
+                {% if page_obj.has_next %}
+                    <li class="previous">
+                        <a href="?page={{ page_obj.next_page_number }}"><span aria-hidden="true">&larr;</span> Forrige
+                            sesong</a>
+                    </li>
+                {% endif %}
 
-            <li class="disabled pager-counter">
-                Side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}
-            </li>
-
-            {% if page_obj.has_previous %}
-                <li class="next">
-                    <a href="?page={{ page_obj.previous_page_number }}">Nyere <span aria-hidden="true">&rarr;</span></a>
+                <li class="disabled pager-counter">
+                    Side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}
                 </li>
-            {% endif %}
+
+                {% if page_obj.has_previous %}
+                    <li class="next">
+                        <a href="?page={{ page_obj.previous_page_number }}">Neste sesong <span
+                                aria-hidden="true">&rarr;</span></a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+    {% else %}
+        <p>Ingen podcast tilgjengelig.</p>
+    {% endif %}
+{% endblock %}
+{% block sidebar %}
+    {% if podcast_logo %}
+        <img src="{{ podcast_logo.url }}"/>
+    {% endif %}
+    {% if podcast_clips %}
+        <h2>Lydklipp</h2>
+        <p>Her finner du nedlastbare overganger, jingler og annet vi føler enhver Skråttcastlytter bør ha tilgang
+            til.</p>
+        <ul>
+            {% for clip in podcast_clips %}
+                <li>
+                    <a href="/podcast/{{ clip.id }}">
+                        {{ clip.title }}
+                    </a>
+                </li>
+            {% endfor %}
         </ul>
-    </nav>
-{% else %}
-    <p>Ingen podcast tilgjengelig.</p>
-{% endif %}
+    {% endif %}
 {% endblock %}
