--- a/nablaweb/podcast/templates/podcast/podcast_detail.html
+++ b/nablaweb/podcast/templates/podcast/podcast_detail.html
@@ -1,76 +1,33 @@
 {% extends "base.html" %}
 {% load markdown_deux_tags %}
+{% block title %}
+Skråttcast - {{ podcast.title }}
+{% endblock %}
 {% block content %}
 
 <link type="text/css" href="{{ STATIC_URL }}podcast/skin/jpn.css" rel="stylesheet" />
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-<script type="text/javascript" src="{{ STATIC_URL }}podcast/js/jquery.jplayer.min.js"></script>
-<script type="text/javascript">
-
-    function loadmedia(){
-        $('#jquery_jplayer_1').jPlayer('setMedia', {
-            title: '{{ podcast.title }}',
-            mp3: '{{ podcast.file.url }}',
-            ogg: '{{ podcast.file.url }}'
-        });
-    }
-
-    $(document).ready(function(){
-      $("#jquery_jplayer_1").jPlayer({
-        ready: loadmedia,
-        swfPath: "/static/js/Jplayer.swf",
-        errorAlerts: true,
-        supplied: "mp3, ogg",
-        solution: "html, flash",
-      });
-    });
-
-</script>
 <div class="tittel">
-<ul>
+<div>
   <h2>Skråttcast - {{ podcast.title }}</h2>
   {% if podcast.image %}
   <img src="{{ podcast.image.url }}" alt="{{ podcast.title }}" style="max-width: 100%;"/>
   {% endif %}
-  <p>{{ podcast.pub_date }}. Antall visninger: ca. {{ podcast.view_counter }}</p>
-</ul>
+  <p><i>{{ podcast.pub_date | date:"d.m.Y" }}. Antall visninger: ca. {{ podcast.view_counter }}</i></p>
 </div>
-<ul>
-    <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-    <div id="jp_container_1" class="jp-audio">
-      <div class="jp-type-single">
-        </div>
-    <div class="jp-gui jp-interface">
-
-        <ul class="jp-controls">
-          <li><a href="javascript:;" class="jp-play" tabindex="1">&#61515;</a></li>
-          <li><a href="javascript:;" class="jp-pause" tabindex="1">&#61516;</a></li>
-          <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">&#61480;</a></li>
-          <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">&#61478;</a></li>
-        </ul>
-
-        <div class="jp-progress">
-          <div class="jp-seek-bar">
-            <div class="jp-play-bar"></div>
-          </div>
-        </div>
-
-        <div class="jp-time-holder">
-          <div class="jp-current-time"></div>
-        </div>
-
-        <div class="jp-volume-bar">
-          <div class="jp-volume-bar-value"></div>
-        </div>
-
-    <div class="jp-no-solution">
-      <span>Update Required</span>
-      To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-    </div>
-  </div>
 </div>
+<div>
+    <audio controls>
+        <source src="{{ podcast.file.url }}" type="audio/ogg">
+        <source src="{{ podcast.file.url }}" type="audio/mpeg">
+    </audio>
+</div>
+
 <p>{{ podcast.description | markdown }}</p>
-<div><a class="btn btn-primary btn-large" href="{{ podcast.file.url }}">
-        Last ned
-</a></div>
+<div>
+<a class="btn btn-primary btn-large" href="{{ podcast.file.url }}">
+    Last ned
+</a>
+</div>
+
 {% endblock %}
