Noen flere endringer etter feedback.

--- a/nablaweb/podcast/static/podcast/podcast.css
+++ b/nablaweb/podcast/static/podcast/podcast.css
@@ -2,9 +2,14 @@
 .banner-wrapper img {
     display: block;
     max-width: 750px;
+    margin-bottom: 5px;
 }
 
 .logo-wrapper img {
     display: block;
     max-width: 350px;
+}
+
+audio {
+    width: 750px;
 }
