--- a/nablaweb/podcast/templates/podcast/podcast_detail.html
+++ b/nablaweb/podcast/templates/podcast/podcast_detail.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% load markdown_deux_tags %}
+{% load sekizai_tags %}
+{% load static %}
 {% block title %}
 Skråttcast - {{ podcast.title }}
 {% endblock %}
 {% block content %}
 
-<link type="text/css" href="{{ STATIC_URL }}podcast/skin/jpn.css" rel="stylesheet" />
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+{% addtoblock "css" %}
+    <link href="{% static "podcast/podcast.css" %}" rel="stylesheet"/>
+{% endaddtoblock %}
+
 <div class="tittel">
 <div>
   <h2>Skråttcast - {{ podcast.title }}</h2>
