--- a/nablaweb/podcast/templates/podcast/podcast_list.html
+++ b/nablaweb/podcast/templates/podcast/podcast_list.html
@@ -10,14 +10,6 @@
         <link href="{% static "podcast/list.css" %}" rel="stylesheet"/>
         <link href="{% static "podcast/podcast.css" %}" rel="stylesheet"/>
     {% endaddtoblock %}
-    <h1>Skråttcast</h1>
-    <p>
-        {% if info %}
-            {{ info.content }}
-        {% else %}
-            Om <a href="/komite/skrattcast/">Skråttcast</a>.
-        {% endif %}
-    </p>
     {% if season_name %}
         <h1>{{ season_name }}</h1>
         {% if season.banner %}
@@ -69,6 +61,14 @@
     {% endif %}
 {% endblock %}
 {% block sidebar %}
+    <h1>Skråttcast</h1>
+    <p>
+        {% if info %}
+            {{ info.content }}
+        {% else %}
+            Om <a href="/komite/skrattcast/">Skråttcast</a>.
+        {% endif %}
+    </p>
     {% if season.logo %}
     <div class="logo-wrapper">
         <img class="thumbnail" src="{{ season.logo.url }}"/>
@@ -76,8 +76,13 @@
     {% endif %}
     {% if podcast_clips %}
         <h2>Lydklipp</h2>
-        <p>Her finner du nedlastbare overganger, jingler og annet vi føler enhver Skråttcastlytter bør ha tilgang
-            til.</p>
+        <p>
+            Her finner du nedlastbare overganger, jingler og annet vi føler enhver Skråttcastlytter bør ha tilgang
+            til.
+        </p>
+        <p>
+            Hvis det er noen lydklipp du ikke finner i denne listen, så finner du dem nok i listene i de tidligere sesongene.
+        </p>
         <ul>
             {% for clip in podcast_clips %}
                 <li>
