--- a/nablaweb/podcast/templates/podcast/podcast_detail.html
+++ b/nablaweb/podcast/templates/podcast/podcast_detail.html
@@ -35,3 +35,9 @@ Skråttcast - {{ podcast.title }}
 </div>
 
 {% endblock %}
+{% block sidebar %}
+    {% if season_name %}
+        <a href="{{ season.get_absolute_url }}" class="black-link"><h1>{{ season_name }}</h1></a>
+    {% endif %}
+    {% include "podcast/includes/sidebar_include.html" %}
+{% endblock %}
