--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -97,7 +97,7 @@
 
             {# Faste lenker om Nabla #}
 			    <li><a href="{% url "nablad_list" %}">Nabladet</a></li>
-                <li><a href="{% url "podcast_list" %}">Skråttcast</a></li>
+                <li><a href="{% url "season_view" %}">Skråttcast</a></li>
                 <li><a href="{% url "meeting_record_list" %}">Styremøtereferater</a></li>
                 <li><a href="{% url "albums" %}">Bilder</a></li>
             </ul>
