--- a/nablaweb/podcast/templates/podcast/podcast_detail.html
+++ b/nablaweb/podcast/templates/podcast/podcast_detail.html
@@ -29,7 +29,7 @@ Skråttcast - {{ podcast.title }}
 
 <p>{{ podcast.description }}</p>
 <div>
-<a class="btn btn-primary btn-large" href="{{ podcast.file.url }}">
+<a class="btn btn-primary btn-large" href="{{ podcast.file.url }}" download>
     Last ned
 </a>
 </div>
