--- a/nablaweb/podcast/static/podcast/list.css
+++ b/nablaweb/podcast/static/podcast/list.css
@@ -17,10 +17,11 @@
 .list-container li {
   display: block;
   font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
-  border-bottom: 1px solid #ccc;
+//  border-bottom: 1px solid #ccc;
   overflow: hidden;
   height: 150px;
   overflow: hide;
+  margin-bottom: 8px;
 }
 
 .list-container li img {
@@ -55,5 +56,7 @@
 .list-container li a .date-text {
     font-size: 12px;
     color: #888;
+    position: relative;
+    bottom: 15px;
     float: right;
 }
