--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -102,21 +102,10 @@
                 <li><a href="{% url "albums" %}">Bilder</a></li>
             </ul>
         </li>
-        <li class="dropdown">
-            <a href="#komiteer" class="dropdown-toggle" data-toggle="dropdown">
+        <li>
+            <a href="{% url "committee_overview" %}" >
                 Komitéer
-                <span class="caret"></span>
             </a>
-            <ul class="dropdown-menu" >
-                {# {% cache 3600 "com_list_dropdown" %} #}
-                {# Liste over komiteer #}
-                {% for com in coms %}
-                    <li><a href="{{ com.get_absolute_url }}">{{ com.com.name }}</a></li>
-                {% empty %}
-                    <li><a>Ingen komiteer eksisterer</a></li>
-                {% endfor %}
-                {# {% endcache %} #}
-            </ul>
         </li>
         <li><a href="http://bokskap.nabla.no">Bokskap</a></li>
     </ul>
