Endringer for Skråttcast.

--- a/nablaweb/podcast/templates/podcast/includes/sidebar_include.html
+++ b/nablaweb/podcast/templates/podcast/includes/sidebar_include.html
@@ -4,6 +4,12 @@
     <img class="thumbnail" src="{{ season.logo.url }}"/>
 </div>
 {% endif %}
+<h2>Kontakte Skråttcast?</h2>
+<p>
+    Vi elsker leserbrev, tilbakemeldinger og forslag, og ønsker at du, ja du,
+    mailer oss.
+</p>
+<a href="mailto:skraattcast@nabla.ntnu.no" class="btn btn-primary btn-large">Brevsprekken</a>
 {% if podcast_clips %}
     <h2>Lydklipp</h2>
     <p>
