Rettet noen feil.

--- a/templates/events/event_detail.html
+++ b/templates/events/event_detail.html
@@ -37,7 +37,7 @@
 
 {% block sidebar %}
 
-{% include "events/includes/info.html" with event=event %}
+{% include "events/includes/info.html" %}
 {% include "content/includes/meta.html" with content=event %}
 {% include "events/includes/sidebar-admin.html" %}
 
