--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Ooops!</h2>
-<p>Her har det skjedd noe galt! Ta kontakt med webkom på <a
+<h1>500 - Oi da</h1>
+<p>
+    Her har det skjedd noe galt! Ta kontakt med webkom på <a
     href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>, og fortell så detaljert
 som mulig hva du gjorde når dette skjedde.
+</p>
 {% endblock %}
