Fixed some bugs with the testproject

--- a/testproject/templates/base.html
+++ b/testproject/templates/base.html
@@ -5,6 +5,11 @@
 
 <head>
     <meta charset="utf-8">
+    {% render_block "css" %}
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -61,7 +66,6 @@
 </div>{# end whitebox #}
 
 <footer>
-
     <div class="container">
     <div class="row">
 
