Add AdminLinksMixin (view)
AdminLinksMixin adds the url to the admin page for editing or deleting a
model to the context.

--- a/content/templates/content/includes/sidebar-admin.html
+++ b/content/templates/content/includes/sidebar-admin.html
@@ -6,6 +6,16 @@
     <ul class="nav">
         {% block sidebar-admin %}
         {% endblock %}
+        {% if change_url %}
+        <li><a href="{{ change_url }}">
+            <span class="glyphicon glyphicon-pencil"></span>
+            Endre
+        </a></li>
+        <li><a href="{{ delete_url }}">
+            <span class="glyphicon glyphicon-trash"></span>
+            Slett
+        </a></li>
+        {% endif %}
     </ul>
 </div>
 {% endif %}
