--- a/poll/templates/poll/poll_include.html
+++ b/poll/templates/poll/poll_include.html
@@ -9,7 +9,7 @@
 {% endaddtoblock %}
 
 <br>
-<div class="poll well hidden-xs">
+<div class="poll well">
     <h4>{{ poll.question }}</h4>
 
     {% if poll_has_voted %}
