--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,18 @@
             {% endfor %}
             </ul>
         </li>
+        {% if user.is_authenticated %}
+        <li class="dropdown">
+            <a href="#bruker" class="dropdown-toggle" data-toggle="dropdown">
+                Brukersider
+                <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" >
+                <li><a href="{% url "user_polls" %}">Brukeravstemninger</a></li>
+            </ul>
+        </li>
+        {% endif %}
+
     </ul>
     {# end navigasjonslenker #}
 
