Fjerner søk-appen
Søk-appen gjør svært lite. Det er strengt tatt bare en enkelt url pluss
noen templates, så jeg flyttet det til hoved nablaweb-appen.

--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <form method="get" action="." class="form-search">
+    <form method="get" action="" class="form-search">
         <div style="margin-top: 15px; margin-bottom: 20px;"><div class="input-append"><input type="text" name="q" id="id_q" class="search-query" style="width:
                 25em;" placeholder="{% if not query %}Søk...{% else %}{% endif %}" {% if query %}value="{{ query }}"{% endif %}/>&nbsp;
                 <button type="submit" class="btn" value="Søk"><i class="icon-search"></i></button></div></div>
