Fixed a bug in album.

--- a/content/templates/content/album.html
+++ b/content/templates/content/album.html
@@ -32,3 +32,10 @@
   </nav>
 </div>
 {% endblock content %}
+
+{% block sidebar %}
+
+
+{% include "content/includes/album_sidebar_admin.html" %}
+
+{% endblock %}
