La til detailview i podcast og tilpasset ny versjon av content.

--- a/podcast/templates/podcast/podcast_detail.html
+++ b/podcast/templates/podcast/podcast_detail.html
@@ -47,4 +47,5 @@
         <a href="{{ season.get_absolute_url }}" class="black-link"><h1>{{ season_name }}</h1></a>
     {% endif %}
     {% include "podcast/includes/sidebar_include.html" %}
+    {% include "content/includes/sidebar-admin.html" %}
 {% endblock %}
