--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@
     <link rel="apple-touch-icon" href="{{ STATIC_URL }}img/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}img/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}img/apple-touch-icon-114x114.png">
+    {% addtoblock "js" %}
+    <script src="{{ STATIC_URL }}wiki/js/core.js"></script>
+    {% endaddtoblock %}
 
     {% render_block "js-head" %}
 
@@ -155,6 +158,7 @@
                         <li><a href="/admin">Admin</a></li>
                         <li><a href="/admin/filebrowser/browse">Filer</a></li>
                     {% endif %}
+                    {% include "wiki/plugins/notifications/menubaritem.html" %}
                 </ul>
             </li>
             {# end bruker-dropdown #}
