--- a/templates/wiki/base_site.html
+++ b/templates/wiki/base_site.html
@@ -79,7 +79,7 @@
           </div>
           {% block wiki_header_navlinks %}
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">{% trans "Heim" %}</a></>
+            <li class="active"><a href="/">{% trans "Heim" %}</a></li>
           </ul>
           {% endblock %}
         </div>
