--- a/podcast/templates/podcast/podcast_detail.html
+++ b/podcast/templates/podcast/podcast_detail.html
@@ -11,15 +11,15 @@
     <link href="{% static "podcast/podcast.css" %}" rel="stylesheet"/>
 {% endaddtoblock %}
 
-<div class="tittel">
+<div class="container tittel">
   <h2>{{ podcast.title }}</h2>
   {% if podcast.image %}
-  <img src="{{ podcast.image.url }}" alt="{{ podcast.title }}" style="max-width: 100%;"/>
+  <img class="img-responsive" src="{{ podcast.image.url }}" alt="{{ podcast.title }}" style="max-width: 100%;"/>
   {% endif %}
   <p><i>Dato: {{ podcast.pub_date | date:"d.m.Y" }}. Antall visninger: ca. {{ podcast.view_counter }}</i></p>
 </div>
 {% if podcast.file %}
-<div>
+<div class="container">
     <audio controls>
         <source src="{{ podcast.file.url }}" type="audio/ogg">
         <source src="{{ podcast.file.url }}" type="audio/mpeg">
