--- a/interactive/templates/interactive/advent_base.html
+++ b/interactive/templates/interactive/advent_base.html
@@ -1,21 +1,73 @@
-{% extends "base.html" %}
 {% load mediawiki_links listutil %}
 {% load markdown_deux_tags %}
 {% load thumbnail %}
-{% load sekizai_tags %}
+{% load sekizai_tags static %}
 
-{% block title %}{{ calendar.year }}{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    {% addtoblock "css" %}
+    <link rel="css/stylesheet" href="{% static "interactive/css/advent_calendar.css" %}"/>
+    {% endaddtoblock %}
+
+    <title>
+        Nabla - Julekalender {{ calendar.year}}
+    </title>
+    <meta name="description"
+          content="Hjemmesiden til linjeforeningen Nabla, for studentene på
+                   fysikk og matematikk-masterprogrammet på NTNU.">
+    <meta name="author" content="Nabla">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    {% addtoblock "css" %}
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    {% endaddtoblock %}
+
+    {% addtoblock "js" %}
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    {% endaddtoblock %}
+    {% render_block "css" %}
+
+    <!-- Fav and touch icons, for screen and mobile -->
+    <link rel="shortcut icon" href="{{STATIC_URL }}img/favicon.ico">
+    <link rel="apple-touch-icon" href="{{ STATIC_URL }}img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}img/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}img/apple-touch-icon-114x114.png">
+    {% addtoblock "js" %}
+    <script src="{{ STATIC_URL }}wiki/js/core.js"></script>
+    {% endaddtoblock %}
+
+    {% addtoblock "js-head" %}
+        <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    {% endaddtoblock %}
+
+    {% render_block "js-head" %}
+
+    {% block more_head %}
+    {% endblock %}
+
+</head>
+
+<body>
+
 
 {% block content %}
-
-<table>
+<div class="container">
+    <h1>Nablas julekalender 2015</h1>
+<table class="table advent-table">
     {% for row in doors|row_split:4 %}
     <tr>
         {% for door in row %}
-        <td><a href="{{ door.get_absolute_url }}">{{ door.number }}</a></td>
+        <td class="advent-door"><a href="{{ door.get_absolute_url }}"><img src="/static/img/logo.png" /><span>{{ door.number }}</span></a></td>
         {% endfor %}
     </tr>
     {% endfor %}
 </table>
-
+</div>
 {% endblock %}
+
+</body>
+
