--- a/poll/templates/poll/user_polls.html
+++ b/poll/templates/poll/user_polls.html
@@ -34,10 +34,11 @@ Mine avstemninger
         <div class="choice">{{ choice.choice }}</div>
         <div class="progress">
             <div class="progress-bar" style="width:{% widthratio choice.votes poll.get_total_votes 100 %}%">
-                            <span class="percent{% if choice.votes == 0 %} zero{% endif %}">
-                                {% widthratio choice.votes poll.get_total_votes 100 %}%
-                            </span>
+                <span class="percent{% if choice.votes == 0 %} zero{% endif %}">
+                    {% widthratio choice.votes poll.get_total_votes 100 %}%
+                </span>
             </div>
+        </div>
         {% endfor %}
     {% else %}
     <form action="{% url "poll.views.vote" poll.id %}?next={% url "poll_user" %}" method="post">
