Bytter ut div med span inne i en label tag
Det er i følge pycharm og w3-validator ikke lov med div-tagger inne i en
label.

--- a/poll/templates/poll/poll_list.html
+++ b/poll/templates/poll/poll_list.html
@@ -49,8 +49,7 @@ Brukeravstemninger
     <div class="radio">
         <label>
             <input type="radio" name="choice" value="{{ choice.id }}">
-
-            <div class="choice">{{ choice.choice }}</div>
+            <span class="choice">{{ choice.choice }}</span>
         </label>
     </div>
     {% endfor %}
