--- a/poll/templates/poll/poll_include.html
+++ b/poll/templates/poll/poll_include.html
@@ -35,7 +35,7 @@
                 <div class="radio">
                     <label>
                         <input type="radio" name="choice" value="{{ choice.id }}">
-                        <div class="choice">{{ choice.choice }}</div>
+                        <span class="choice">{{ choice.choice }}</span>
                     </label>
                 </div>
             {% endfor %}
