--- a/poll/templates/poll/user_polls.html
+++ b/poll/templates/poll/user_polls.html
@@ -47,8 +47,7 @@ Mine avstemninger
     <div class="radio">
         <label>
             <input type="radio" name="choice" value="{{ choice.id }}">
-
-            <div class="choice">{{ choice.choice }}</div>
+            <span class="choice">{{ choice.choice }}</span>
         </label>
     </div>
     {% endfor %}
